<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backforsignapp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".signupscreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_lavender"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userlog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_lavender"
                android:drawableStart="@drawable/baseline_person_24"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/passlog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_lavender"
                android:drawableStart="@drawable/baseline_lock_24"
                android:hint="@string/Password"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/signlog"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/login"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:onClick="onClickLogIn"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logRedirectText"
                android:text="@string/signDirect"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                android:onClick="signDirect"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>